--- a/samProyect/tsconfig.json
+++ b/samProyect/tsconfig.json
@@ -1,12 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+    "jsx": "react-native"
   },
   "include": [
     "**/*.ts",
